<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.solarisintel.docophoto.SubActivity" >

    <item
        android:id="@+id/menu_info_show"
        android:enabled="true"
        android:icon="@drawable/ic_menu_info_show"
        android:orderInCategory="1"
        android:title="@string/menu_info_show"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_info_hide"
        android:enabled="true"
        android:icon="@drawable/ic_menu_info_hide"
        android:orderInCategory="1"
        android:title="@string/menu_info_hide"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_turn"
        android:enabled="true"
        android:icon="@drawable/ic_menu_rotate"
        android:orderInCategory="2"
        android:title="@string/menu_turn"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_zoom_in"
        android:enabled="true"
        android:icon="@drawable/ic_menu_zoom_in"
        android:orderInCategory="1"
        android:title="@string/menu_zoom_in"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_zoom_out"
        android:enabled="true"
        android:icon="@drawable/ic_menu_zoom_out"
        android:orderInCategory="2"
        android:title="@string/menu_zoom_out"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_map"
        android:enabled="false"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:orderInCategory="3"
        android:title="@string/menu_map"
        android:visible="true"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_photo"
        android:enabled="false"
        android:icon="@android:drawable/ic_menu_gallery"
        android:orderInCategory="3"
        android:title="@string/menu_photo"
        android:visible="true"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_edit"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="3"
        android:title="@string/menu_edit"
        android:visible="true"
        app:showAsAction="never"/>

</menu>
