<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.solarisintel.docophoto.MainActivity" >

    <item
        android:id="@+id/menu_sort_az"
        android:enabled="true"
        android:icon="@drawable/ic_menu_calendar_az"
        android:orderInCategory="1"
        android:title="@string/menu_sort_az"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_sort_za"
        android:enabled="true"
        android:icon="@drawable/ic_menu_calendar_za"
        android:orderInCategory="1"
        android:title="@string/menu_sort_za"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_next_memo"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_call"
        android:orderInCategory="2"
        android:title="@string/menu_next_memo"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_goto_first"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_call"
        android:orderInCategory="2"
        android:title="@string/menu_goto_first"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_goto_last"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_call"
        android:orderInCategory="2"
        android:title="@string/menu_goto_last"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_progress"
        app:actionLayout="@layout/action_bar_progress"
        app:showAsAction="always"
        android:visible="false"
        android:title="@string/loadingActionBar"
        />
</menu>
